# pydantic-7295

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ba69f05d1fec_first_revision.py
src/: main.py  settings.py
